welcome.lessons.welcome.loopdowhile.Poucet2.scala.code
var nb=0
while (!sortieTrouve) {
  do {
    avance;
    if (estSurBiscuit) {
      nb=nb+1;
    }
  } while (!crossing)
  if (nb >= 3) {
    gauche;
  } else droite
  nb=0
}